--- a/assets/main.css
+++ b/assets/main.css
@@ -1,30 +1,33 @@
 body {
-  background-color: #282b28;
+  background-color: #241623;
   margin-top: 20px; }
 
+.container .jumbotron {
+  max-width: 80%;
+  margin: 0 auto; }
 .container #top {
-  background-color: #114B5F;
+  background-color: #EDF7D2;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   margin-bottom: 0; }
 .container #info {
-  background-color: #484D6D;
+  background-color: #C9C19F;
   border-radius: 0;
   margin-bottom: 0px;
   margin-top: 0px; }
 .container #books {
-  background-color: #114B5F;
+  background-color: #EDF7D2;
   border-radius: 0;
   margin-bottom: 0px;
   margin-top: 0px; }
 .container #quote {
-  background-color: #484d6d;
+  background-color: #C9C19F;
   border-radius: 0;
   margin-bottom: 0px;
   margin-top: 0px; }
 
 .my-footer {
-  background-color: #3e5641;
+  background-color: #F55536;
   padding-top: 20px;
   padding-bottom: 20px; }
   .my-footer p {
@@ -55,6 +58,9 @@ h3 {
     font-family: Georgia, serif;
     font-size: 25px; }
 
+.thumbnail .h3 {
+  font-size: 10px; }
+
 .main-content {
   background-color: #fff;
   padding-top: 20px; }
@@ -70,7 +76,7 @@ h3 {
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%; }
+    max-width: 65%; }
 
 .bio h3 {
   font-family: "Russo One", sans-serif; }
@@ -78,13 +84,13 @@ h3 {
   font-size: 16px;
   margin-bottom: 5px; }
 
-.works {
+#books {
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto; }
-  .works h3 {
+  #books h3 {
     font-family: "Russo One", sans-serif; }
-  .works ul li {
+  #books ul li {
     font-size: 20px; }
 
 /*# sourceMappingURL=main.css.map */
