--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,10 +1,7 @@
-$bg-color: #282b28;
-$books-color: #114B5F;
-$footer-color: #3e5641;
-$info-color: #484D6D;
-$quote-color: #484d6d;
-$top-color: #114B5F;
-$works-color: #484d6d;
+$bg-color: #241623;
+$footer-color: #F55536;
+$main-color1: #EDF7D2;
+$main-color2: #C9C19F;
 
 @mixin jumbo-margin() {
   border-radius: 0;
@@ -21,25 +18,30 @@ body {
 
 .container  {
   
+  .jumbotron {
+    max-width: 80%;
+    margin: 0 auto;
+  }
+
   #top {
-    background-color: $top-color;
+    background-color: $main-color1;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     margin-bottom: 0;
   }
   
   #info {
-    background-color: $info-color; 
+    background-color: $main-color2; 
     @include jumbo-margin();    
   }
 
   #books {
-    background-color: $books-color;
+    background-color: $main-color1;
     @include jumbo-margin();
   }
   
   #quote {
-    background-color: $quote-color;
+    background-color: $main-color2;
     @include jumbo-margin();
   }
 } 
@@ -88,7 +90,13 @@ h3 {
     font-size: 25px;
   }
 
-} // .citation
+} // .
+
+.thumbnail {
+  .h3 {
+    font-size: 10px;
+  }
+}
 
 .main-content {
   background-color: #fff;
@@ -107,7 +115,7 @@ h3 {
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%;
+    max-width: 65%;
   }
 
 } // .photo
@@ -125,7 +133,7 @@ h3 {
 
 } // .bio
 
-.works {
+#books {
   // background-color: $works-color;
   margin-bottom: 20px;
   margin-left: auto;
